# CodeCrunchr

.github/workflows/: docker-publish.yml
app/app/: index.tsx
app/app/home/: _layout.tsx  index.tsx
app/app/leaderboard/: _layout.tsx  index.tsx
app/app/settings/: _layout.tsx  index.tsx
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 054e5c485574_userid_ondelete_fkey.py  9b297b101abd_create_simplified_user_preference_table.py  9dc0cc062233_forgot_foreign_key_on_user_pref.py  a16c4aca4e26_durations.py  b1bf174dd1bb_placeholder.py  b5ce165ea329_user_setup.py  c9168093cfae_drop_old_preference_db_model.py  e04daf1a1c0a_add_wakatime_profile_model.py  e3a4766e6992_add_goals_table.py  fd12f8e392ea_add_weekly_leaderboards_model.py
backend/src/: app.py
backend/src/caching/: __init__.py
backend/src/db/: __init__.py  helpers.py  models.py
backend/src/dependencies/: auth.py
backend/src/jobs/: __init__.py  leaderboards.py  scheduler.py
backend/src/models/: __init__.py  durations.py  goals.py  leaderboards.py  users.py
backend/src/routers/: __init__.py  durations.py  goals.py  leaderboards.py  ping.py  preferences.py  users.py
backend/src/utils/: env.py  tokens.py
backend/src/wakatime/: __init__.py  auth.py  summaries.py  user.py
backend/tests/: conftest.py  test_ping.py
backend/tests/bugs/: test_lang_duration_pkey_violation.py
